# python-starte-kit

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
peptech_tripvue_streamlit/: __init__.py
src/: app.py
